Caching Mechanism Added for IP Details

--- a/IPInfo/appsettings.Development.json
+++ b/IPInfo/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "IPAPIKey": "API_KEY",
   "IPAPIRootUrl": "http://api.ipstack.com",
+  "CachingExpirationMinutes": 1,
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": "Information",
