--- a/IPInfo.Services/IPInfo.Services.csproj
+++ b/IPInfo.Services/IPInfo.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IPInfo.Core\IPInfo.Core.csproj" />
     <ProjectReference Include="..\IPInfo.Library\IPInfo.Library.csproj" />
   </ItemGroup>
