--- a/IPInfo/appsettings.Development.json
+++ b/IPInfo/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=.\\SQLEXPRESS; database=IPInfo;Integrated Security=True"
+  },
   "IPAPIKey": "API_KEY",
   "IPAPIRootUrl": "http://api.ipstack.com",
   "CachingExpirationMinutes": 1,
