Multiple Ips Batch Job Added

--- a/IPInfo/appsettings.Development.json
+++ b/IPInfo/appsettings.Development.json
@@ -7,7 +7,7 @@
   "CachingExpirationMinutes": 1,
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "File",
