--- a/IPInfo/appsettings.json
+++ b/IPInfo/appsettings.json
@@ -4,9 +4,14 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
+        "Microsoft": "Warning",
         "System": "Warning"
       }
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Hangfire": "Warning"
     }
   }
 }
